# yolov5_pytorch_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
action/: BoundingBoxes.action
docker/: Dockerfile  docker-compose.yaml
exp7_all_usbcam_datasets/: events.out.tfevents.1635705800.2d396a7dcce3.1232.0  opt.yaml  results.csv
exp8_all_usbcam_add1101_datasets/: events.out.tfevents.1635910123.2d396a7dcce3.1440.0  opt.yaml  results.csv
launch/: detector.launch  detector_action.launch  origin_detector.launch  video_2_bag.launch  whiteline_control.launch
src/: detect.py  detect_action.py  draw_detect.py  new_detect.py  only_scan.py  push_image_action.cpp  scan_test.py  test.py  test_detect.py  test_detect2.py  yolo_control.py  yolo_control_obstacle_stop.py  yolo_control_reverse.py  yolo_control_search_switch.py  yolo_control_search_whiteline.py  yolo_control_switching.py
src/utils/: general.py
